# trdp

./: .gitignore  CMakeLists.txt  Makefile  README.md
tools/: prepare_sources.sh  test_cmake_build.sh
